--- a/www/templates/about.html
+++ b/www/templates/about.html
@@ -7,10 +7,11 @@
       <p>Abschlussarbeit: Usability for AR at UA</p>
       <p>Erstprüfer: Martin Schober</p>
     </ion-item>
-  </ion-content>
-  <ion-footer-bar class="bar bar-footer">
-    <div ><p>Developed by:
-      Laura Dengra Torres, in cooperation with SAP Software Solutions</p></div>
+    <ion-item class="item item-text-wrap">
+      <div ><p>Developed by:
+        Laura Dengra Torres, in cooperation with SAP Software Solutions</p></div>
 
-  </ion-footer-bar>
+    </ion-item>
+  </ion-content>
+
 </ion-view>
