--- a/www/templates/learning-map.html
+++ b/www/templates/learning-map.html
@@ -31,8 +31,7 @@
       <ion-item ng-class="{'star': item.star}"
                 ng-repeat='module in modules'
                 ng-value="module.aId"
-                class="item-thumbnail-right item-icon-right
-                  item-text-wrap"
+                class="item-thumbnail-right item-icon-right item-text-wrap"
                 href="#/tab/list/{{module.shortname}}">
         <img ng-src="img/{{module.level}}-tn.png" alt="{{ module.level }}">
 
