--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -1,8 +1,8 @@
 <ion-view hide-nav-bar="true">
   <ion-content class="splash padding">
     <div class="branding">
-      <img ng-src="img/shutter.svg" alt=" Logo" style="width:200px">
-      <div class="h1">Augmented Learning</div>
+      <img ng-src="img/shutter.svg" alt=" Logo" style="width:200px; fill: #f8f8f8">
+      <div class="h1" style="color: #f8f8f8">Augmented Learning</div>
       <p>Learn how to use your camera in a real world viewer.</p>
     </div>
   </ion-content>
