--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -1,4 +1,4 @@
-<ion-tabs class="tabs-icon-top tabs-energized">
+<ion-tabs class="tabs-icon-top tabs-dark">
   <ion-tab title="Home" icon="ion-home"
     href="#/tab/home">
     <ion-nav-view name="home-tab"></ion-nav-view>
