--- a/www/templates/about.html
+++ b/www/templates/about.html
@@ -8,8 +8,19 @@
       <p>Erstprüfer: Martin Schober</p>
     </ion-item>
     <ion-item class="item item-text-wrap">
-      <div ><p>Developed by:
-        Laura Dengra Torres, in cooperation with SAP Software Solutions</p></div>
+      <h3>Bedienungsanleitung zu der AR-UA-App:</h3>
+      <p>Um diese App zu verwenden und die umgesetzten Inhalte zu sehen, navigiert man auf die <b>Learning Modules</b> Ansicht.
+      <p>Dort werden die Lernmodule nach dem <b>Produktnamen</b> des <b>Modells D5200</b> oder alternativ <b>D90 </b>gefiltert.
+      <p> Das umgesetzte Modul befindet sich im <b>advanced skill level</b> und heißt <b>Abnehmen des Objektivs</b>.
+      <p> Wenn man auf die Karte mit diesem Namen tippt, gelangt man in die <b>Detailansicht</b> des Moduls.
+      <p>--> Hier befindet sich die Verlinkung zur AR-World.
+      <p> Hier wird das im Anhang dargestellte Bild der Kamera D5200 gescannt
+      <p>--> darauf erscheint die Erweiterung in Form einer 3D-Animation.
+      <p> Wenn der Nutzer auf das relevante Bauteil drückt (in diesem Fall die Linse bzw. die Objektiventriegelung) wird die dazugehörige Animation gestartet.</p>
+    </ion-item>
+    <ion-item class="item item-text-wrap">
+      <div ><h3>Developed by:
+        <p>Laura Dengra Torres, in cooperation with SAP Software Solutions</h3></div>
 
     </ion-item>
   </ion-content>
